news-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-api
spec:
  selector:
    app: news-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
