news-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: news-agregator.misis.com
    http:
      paths:
      - path: /api/v1/news
        pathType: Prefix
        backend:
          service:
            name: news-api
            port:
              number: 80
